main_app/static/css/base.css
@import url("https://fonts.googleapis.com/css2?family=Delius+Swash+Caps&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");

:root {
  --color-dark-teal: #264653;
  --color-teal-green: #2a9d8f;
  --color-sand-yellow: #e9c46a;
  --color-coral-orange: #f4a261;
  --color-rust-red: #e76f51;
  --color-teal-green-hover: #45b6a4;

  --color-card-bg: #f9f9f9;
  --color-white: #ffffff;
  --color-light-bg: #fdfdfd;
  --color-text: #333333;
  --color-info-blue: #5a90a2;
  --color-danger-hover: #d65c3e;
}

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  height: 100%;
  font-family: "Lato", sans-serif;
  font-size: 16px;
  color: var(--color-text);
  background-color: var(--color-white);
}

body {
  font-family: "Lato", sans-serif;
  font-size: 1rem;
  line-height: 1.6;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  background-color: var(--color-light-bg);
  color: var(--color-text);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Delius Swash Caps", cursive;
  line-height: 1.2;
  font-weight: normal;
  margin-bottom: 1rem;
  text-align: center;
}

h1 {
  font-size: clamp(2rem, 4vw, 2.75rem);
}

h2 {
  font-size: 2rem;
}

h3 {
  font-size: 1.6rem;
}

h4 {
  font-size: 1.3rem;
}

main {
  flex-grow: 1;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

a {
  text-decoration: none;
  color: var(--color-teal-green);
}

a:hover {
  text-decoration: none;
  color: var(--color-teal-green-hover);
}

nav {
  background-color: var(--color-dark-teal);
  color: var(--color-white);
}

nav a {
  color: var(--color-white);
}

nav a:hover {
  color: var(--color-sand-yellow);
}

.nav-container {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 1rem;
  /* max-width: 1200px; */
  width: 100%;
  margin: 0 auto;
}

.hamburger {
  display: none;
  background: none;
  border: none;
  font-size: 1.8rem;
  color: white;
  cursor: pointer;
}

.nav-links {
  list-style: none;
  display: flex;
  gap: 2rem;
}

.landing-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding: 2rem;
  min-height: 70vh;
  gap: 2rem;
}

.landing-buttons {
  display: flex;
  gap: 1.5rem;
}
.landing-container img {
  width: 400px;
}

.landing-container h1 {
  font-size: 2.5rem;
}

.landing-container p {
  font-size: 1.2rem;
  max-width: 600px;
}

.btn {
  display: inline-block;
  padding: 0.75rem 1rem;
  font-size: 1rem;
  font-weight: bold;
  background-color: var(--color-teal-green);
  color: var(--color-white);
  border-radius: 5px;
  text-decoration: none;
  transition: background-color 0.3s ease;
  font-family: "Lato", sans-serif;
  border: none;
  width: fit-content;
}

.button-container {
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.landing-buttons .btn {
  background-color: var(--color-dark-teal);
}

.btn:hover {
  color: var(--color-white);
  background-color: var(--color-teal-green-hover);
}

.btn.danger-btn {
  background-color: var(--color-rust-red);
}

.btn.cancel-btn {
  background-color: var(--color-sand-yellow);
}

.btn.cancel-btn:hover {
  background-color: #f5da95;
}

.btn.danger-btn:hover {
  background-color: #e7866d;
}

#loading-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(255, 255, 255, 0.8);
  z-index: 9999;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#loading-overlay.hidden {
  display: none;
}

.spinner {
  border: 8px solid #f3f3f3;
  border-top: 8px solid var(--color-dark-teal);
  border-radius: 50%;
  width: 60px;
  height: 60px;
  animation: spin 1s linear infinite;
  margin-bottom: 1rem;
}

@keyframes spin {
  to {
    transform: rotate(360deg);
  }
}

footer {
  text-align: center;
  padding: 1rem;
  font-size: 0.9rem;
  color: #777;
  background-color: #f9f9f9;
}

.toast-container {
  position: fixed;
  top: 3rem;
  right: 1rem;
  z-index: 9999;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  align-items: flex-end;
  pointer-events: none;
}

.toast {
  min-width: 200px;
  max-width: 300px;
  padding: 1rem 1.25rem;
  border-radius: 6px;
  font-weight: bold;
  color: #fff;
  opacity: 1;
  animation: slideInFade 0.4s ease, fadeOut 1s ease 3s forwards;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
}

/* Type-specific styles */
.toast.success {
  background-color: var(--color-teal-green);
}

.toast.error {
  background-color: var(--color-rust-red);
}

.toast.info {
  background-color: var(--color-info-blue);
}

@keyframes slideInFade {
  from {
    opacity: 0;
    transform: translateY(-10px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes fadeOut {
  to {
    opacity: 0;
    transform: translateY(-10px);
  }
}

@media (max-width: 950px) {
  .nav-links {
    font-size: 0.8rem;
    text-align: center;
  }
}

@media (max-width: 768px) {
  .hamburger {
    display: block;
  }
  .nav-container {
    justify-content: flex-start;
    padding: 0 0 0 0.5rem;
  }

  .button-container {
    flex-wrap: wrap;
  }

  .nav-links {
    display: none;
    flex-direction: column;
    background-color: var(--color-dark-teal);
    width: 100%;
    padding: 1rem;
    position: absolute;
    top: 45px;
    left: 0;
    z-index: 1000;
    gap: 0;
  }

  .nav-links.show-nav {
    display: flex;
  }

  .nav-links li {
    text-align: left;
    padding: 0.25rem 0;
    font-size: 1.5rem;
  }
}

@media (max-width: 500px) {
  input,
  textarea,
  select {
    font-size: 16px;
  }
  .landing-container {
    gap: 1rem;
  }
  .landing-container img {
    width: 350px;
  }
  .landing-buttons {
    flex-direction: column;
    gap: 1rem;
  }
}

